tests/baselines/reference/genericMemberFunction.errors.txt
genericMemberFunction.ts(3,5): error TS2322: Type 'undefined' is not assignable to type 'FileWithErrors<A, B, C>'.
genericMemberFunction.ts(8,5): error TS2322: Type 'undefined' is not assignable to type 'BuildError<A, B, C>[]'.
genericMemberFunction.ts(11,5): error TS2322: Type 'undefined' is not assignable to type 'BuildResult<A, B, C>'.
genericMemberFunction.ts(16,5): error TS2304: Cannot find name 'a'.
genericMemberFunction.ts(17,5): error TS2304: Cannot find name 'removedFiles'.
genericMemberFunction.ts(18,12): error TS2339: Property 'removeFile' does not exist on type 'BuildResult<A, B, C>'.


==== genericMemberFunction.ts (6 errors) ====
    export class BuildError<A, B, C>{
      public parent<A, B extends A, C>(): FileWithErrors<A, B, C> {
        return undefined;
        ~~~~~~
!!! error TS2322: Type 'undefined' is not assignable to type 'FileWithErrors<A, B, C>'.
      }
    }
    export class FileWithErrors<A, B, C>{
      public errors<A, B extends A, C>(): BuildError<A, B, C>[] {
        return undefined;
        ~~~~~~
!!! error TS2322: Type 'undefined' is not assignable to type 'BuildError<A, B, C>[]'.
      }
      public parent<A, B extends A, C>(): BuildResult<A, B, C> {
        return undefined;
        ~~~~~~
!!! error TS2322: Type 'undefined' is not assignable to type 'BuildResult<A, B, C>'.
      }
    }
    export class BuildResult<A, B, C>{
      public merge<A, B extends A, C>(other: BuildResult<A, B, C>): void {
        a.b.c.d.e.f.g = 0;
        ~
!!! error TS2304: Cannot find name 'a'.
        removedFiles.forEach(<A, B extends A, C>(each: FileWithErrors<A, B, C>) => {
        ~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'removedFiles'.
          this.removeFile(each);
               ~~~~~~~~~~
!!! error TS2339: Property 'removeFile' does not exist on type 'BuildResult<A, B, C>'.
        });
      }
    }
    